--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -579,7 +579,59 @@
     "create_quick_quote": "Schnellangebot erstellen",
     "create_normal_quote": "Normales Angebot erstellen",
     "create_new_policy": "Neue Police erstellen",
-    "report_a_claim": "Einen Schaden melden"
+    "report_a_claim": "Einen Schaden melden",
+    "lead": "Lead",
+    "new_lead": "Nieuwe Lead",
+    "import_lead": "Importeer Lead",
+    "client_type_required": "Cliënttype is vereist",
+    "primary_details": "Primaire Details",
+    "campaign_name": "Campagnenaam",
+    "campaign_name_required": "Campagnenaam is vereist",
+    "date": "Datum",
+    "date_required": "Datum is vereist",
+    "occupation_required": "Beroep is vereist",
+    "lead_status": "Leadstatus",
+    "lead_status_required": "Leadstatus is vereist",
+    "lead_source": "Leadbron",
+    "lead_source_required": "Leadbron is vereist",
+    "lead_activity": "Leadactiviteit",
+    "lead_activity_required": "Leadactiviteit is vereist",
+    "website": "website",
+    "website_required": "Website is vereist",
+    "state": "Staat",
+    "state_required": "Staat is vereist",
+    "postal_address": "Postadres",
+    "postal_address_required": "Postadres is vereist",
+    "postal_code": "Postcode",
+    "postal_code_required": "Postcode is vereist",
+    "organization_details": "Organisatiegegevens",
+    "assigned_to": "Toegewezen aan",
+    "assigned_to_required": "Toewijzing is vereist",
+    "organization": "Organisatie",
+    "organization_required": "Organisatie is vereist",
+    "organization_division": "Organisatiedivisie",
+    "organization_division_required": "Organisatiedivisie is vereist",
+    "team": "Team",
+    "team_required": "Team is vereist",
+    "system_required": "Systeem is vereist",
+    "product_required": "Product is vereist",
+    "account_name": "Accountnaam",
+    "account_name_required": "Accountnaam is vereist",
+    "sector_required": "Sector is vereist",
+    "annual_revenue": "Jaarlijkse omzet",
+    "annual_revenue_required": "Jaarlijkse omzet is vereist",
+    "potential_amount": "Potentieel Bedrag",
+    "potential_amount_required": "Potentieel Bedrag is vereist",
+    "potential_name": "Potentiële Naam",
+    "potential_name_required": "Potentiële Naam is vereist",
+    "potential_sale_stage": "Potentiële Verkoopfase",
+    "potential_sale_stage_required": "Potentiële Verkoopfase is vereist",
+    "potential_contr": "Potentiële Contract",
+    "potential_contr_required": "Potentiële Contract is vereist",
+    "converted": "geconverteerd",
+    "converted_required": "Conversie is vereist",
+    "potential_close_date": "Potentiële Sluitdatum",
+    "potential_close_date_required": "Potentiële Sluitdatum is vereist"
   },
   "gis": {
     "quotation": {
@@ -1107,114 +1159,114 @@
       "debiting_type": "Abbuchungsart",
       "ipf_installments": "IPF-Raten",
       "check_off_installments": "Abbuchungsraten prüfen",
-        "transaction_type": "Transaktionstyp",
-  "client_information": "Kundeninformationen",
-   "commission": "Provision"
+      "transaction_type": "Transaktionstyp",
+      "client_information": "Kundeninformationen",
+      "commission": "Provision"
     },
     "claims": {
-  "opening": {
-    "claim_opening": "Schadensmeldung",
-    "product": "Produkt",
-    "select_product": "Produkt auswählen",
-    "policy": "Versicherungspolice",
-    "select_policy": "Versicherungspolice auswählen",
-    "loss_date": "Verlustdatum",
-    "select_date": "Datum auswählen",
-    "loss_time": "Verlustzeit",
-    "select_time": "Zeit auswählen",
-    "risk": "Risiko",
-    "select_risk": "Risiko auswählen",
-    "notification_date": "Benachrichtigungsdatum",
-    "causation": "Ursache",
-    "select_causation": "Ursache auswählen",
-    "catastrophe_event": "Katastrophe/Ereignis",
-    "select_catastrophe_event": "Katastrophe/Ereignis auswählen",
-    "claim_description": "Schadenbeschreibung",
-    "enter_claim_description": "Schadenbeschreibung eingeben",
-    "party_to_blame": "Verantwortliche Partei",
-    "select_party_to_blame": "Verantwortliche Partei auswählen",
-    "average_basic_salary": "Durchschnittliches Grundgehalt",
-    "enter_average_basic_salary": "Durchschnittliches Grundgehalt eingeben",
-    "average_earnings": "Durchschnittliche Einnahmen",
-    "enter_average_earnings": "Durchschnittliche Einnahmen eingeben",
-    "off_duty_date_from": "Abwesenheitsdatum Von",
-    "off_duty_date_to": "Abwesenheitsdatum Bis",
-    "liability_admission": "Haftungsanerkennung",
-    "next_review_date": "Nächstes Überprüfungsdatum",
-    "next_review_user": "Nächster Überprüfungsbenutzer",
-    "select_next_review_user": "Nächster Überprüfungsbenutzer auswählen",
-    "priority_level": "Prioritätsstufe",
-    "select_priority_level": "Prioritätsstufe auswählen",
-    "reference_number": "Referenznummer",
-    "enter_reference_number": "Referenznummer eingeben",
-    "accident_location": "Unfallort",
-    "enter_accident_location": "Unfallort eingeben",
-    "add_peril": "Gefahr hinzufügen",
-    "peril": "Gefahr",
-    "claim_estimate": "Schätzung des Schadens",
-    "actions": "Aktionen",
-    "edit": "Bearbeiten",
-    "delete": "Löschen",
-    "capture_claim": "Schaden erfassen",
-    "insured_as_claimant": "Versicherter als Kläger",
-    "claimant": "Kläger",
-    "create_claimant": "Kläger erstellen",
-    "peril_details": "Details zur Gefahr",
-    "select_peril": "Gefahr auswählen",
-    "enter_claim_estimate": "Schätzung des Schadens eingeben",
-    "cancel": "Abbrechen",
-    "save": "Speichern",
-    "edit_peril": "Bewerk Gevaar",
-    "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
-    "enter_peril": "Voer Gevaar in"
-  },
-  "claim_transaction": {
-    "claim_transaction_details": "Details der Anspruchsabwicklung",
-    "claim_number": "Anspruchsnummer",
-    "product": "Produkt",
-    "risk_wef": "Risiko WEF",
-    "loss_description": "Schadensbeschreibung",
-    "claim_status": "Anspruchsstatus",
-    "catastrophe": "Katastrophe",
-    "policy_number": "Police-Nummer",
-    "insured": "Versicherter",
-    "risk_wet": "Risiko WET",
-    "booked_by": "Gebucht von",
-    "next_review_date": "Nächster Überprüfungstermin",
-    "event": "Ereignis",
-    "endorsement_number": "Vermerksnummer",
-    "risk": "Risiko",
-    "claim_loss_date": "Datum des Anspruchsverlusts",
-    "booked_date": "Buchungsdatum",
-    "agent_intermediary": "Agent/Vermittler",
-    "priority_level": "Prioritätsstufe",
-    "client": "Klient",
-    "risk_value": "Risikowert",
-    "claim_notification_date": "Datum der Anspruchsbenachrichtigung",
-    "admit_liability": "Haftung übernehmen",
-    "insured_policy_no": "Versicherte Police-Nr.",
-    "currency": "Währung"
-  },
-  "claim_transaction_report": {
-    "claim_transaction_report": "Anspruchsabwicklungsbericht",
-    "claim_revisions": "Anspruchsrevisionen",
-    "claim_payments": "Anspruchszahlungen",
-    "letters_and_memos": "Briefe und Memos",
-    "policy_enquiry": "Police-Anfrage",
-    "back_to_claim_enquiry": "Zurück zur Anspruchsabfrage",
-    "trans_type": "Transaktionsart",
-    "trans_date": "Transaktionsdatum",
-    "gross_liability": "Bruttohaftung",
-    "net_liability_payee": "Nettohaftungsempfänger",
-    "paid_amount": "Gezahlter Betrag",
-    "authorised_by": "Autorisiert von",
-    "authorise_date": "Autorisierungsdatum",
-    "cheque_number": "Schecknummer",
-    "cheque_date": "Scheckdatum",
-    "receipt_number": "Empfangsnummer",
-    "action": "Aktion"
-  }
-}
+      "opening": {
+        "claim_opening": "Schadensmeldung",
+        "product": "Produkt",
+        "select_product": "Produkt auswählen",
+        "policy": "Versicherungspolice",
+        "select_policy": "Versicherungspolice auswählen",
+        "loss_date": "Verlustdatum",
+        "select_date": "Datum auswählen",
+        "loss_time": "Verlustzeit",
+        "select_time": "Zeit auswählen",
+        "risk": "Risiko",
+        "select_risk": "Risiko auswählen",
+        "notification_date": "Benachrichtigungsdatum",
+        "causation": "Ursache",
+        "select_causation": "Ursache auswählen",
+        "catastrophe_event": "Katastrophe/Ereignis",
+        "select_catastrophe_event": "Katastrophe/Ereignis auswählen",
+        "claim_description": "Schadenbeschreibung",
+        "enter_claim_description": "Schadenbeschreibung eingeben",
+        "party_to_blame": "Verantwortliche Partei",
+        "select_party_to_blame": "Verantwortliche Partei auswählen",
+        "average_basic_salary": "Durchschnittliches Grundgehalt",
+        "enter_average_basic_salary": "Durchschnittliches Grundgehalt eingeben",
+        "average_earnings": "Durchschnittliche Einnahmen",
+        "enter_average_earnings": "Durchschnittliche Einnahmen eingeben",
+        "off_duty_date_from": "Abwesenheitsdatum Von",
+        "off_duty_date_to": "Abwesenheitsdatum Bis",
+        "liability_admission": "Haftungsanerkennung",
+        "next_review_date": "Nächstes Überprüfungsdatum",
+        "next_review_user": "Nächster Überprüfungsbenutzer",
+        "select_next_review_user": "Nächster Überprüfungsbenutzer auswählen",
+        "priority_level": "Prioritätsstufe",
+        "select_priority_level": "Prioritätsstufe auswählen",
+        "reference_number": "Referenznummer",
+        "enter_reference_number": "Referenznummer eingeben",
+        "accident_location": "Unfallort",
+        "enter_accident_location": "Unfallort eingeben",
+        "add_peril": "Gefahr hinzufügen",
+        "peril": "Gefahr",
+        "claim_estimate": "Schätzung des Schadens",
+        "actions": "Aktionen",
+        "edit": "Bearbeiten",
+        "delete": "Löschen",
+        "capture_claim": "Schaden erfassen",
+        "insured_as_claimant": "Versicherter als Kläger",
+        "claimant": "Kläger",
+        "create_claimant": "Kläger erstellen",
+        "peril_details": "Details zur Gefahr",
+        "select_peril": "Gefahr auswählen",
+        "enter_claim_estimate": "Schätzung des Schadens eingeben",
+        "cancel": "Abbrechen",
+        "save": "Speichern",
+        "edit_peril": "Bewerk Gevaar",
+        "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
+        "enter_peril": "Voer Gevaar in"
+      },
+      "claim_transaction": {
+        "claim_transaction_details": "Details der Anspruchsabwicklung",
+        "claim_number": "Anspruchsnummer",
+        "product": "Produkt",
+        "risk_wef": "Risiko WEF",
+        "loss_description": "Schadensbeschreibung",
+        "claim_status": "Anspruchsstatus",
+        "catastrophe": "Katastrophe",
+        "policy_number": "Police-Nummer",
+        "insured": "Versicherter",
+        "risk_wet": "Risiko WET",
+        "booked_by": "Gebucht von",
+        "next_review_date": "Nächster Überprüfungstermin",
+        "event": "Ereignis",
+        "endorsement_number": "Vermerksnummer",
+        "risk": "Risiko",
+        "claim_loss_date": "Datum des Anspruchsverlusts",
+        "booked_date": "Buchungsdatum",
+        "agent_intermediary": "Agent/Vermittler",
+        "priority_level": "Prioritätsstufe",
+        "client": "Klient",
+        "risk_value": "Risikowert",
+        "claim_notification_date": "Datum der Anspruchsbenachrichtigung",
+        "admit_liability": "Haftung übernehmen",
+        "insured_policy_no": "Versicherte Police-Nr.",
+        "currency": "Währung"
+      },
+      "claim_transaction_report": {
+        "claim_transaction_report": "Anspruchsabwicklungsbericht",
+        "claim_revisions": "Anspruchsrevisionen",
+        "claim_payments": "Anspruchszahlungen",
+        "letters_and_memos": "Briefe und Memos",
+        "policy_enquiry": "Police-Anfrage",
+        "back_to_claim_enquiry": "Zurück zur Anspruchsabfrage",
+        "trans_type": "Transaktionsart",
+        "trans_date": "Transaktionsdatum",
+        "gross_liability": "Bruttohaftung",
+        "net_liability_payee": "Nettohaftungsempfänger",
+        "paid_amount": "Gezahlter Betrag",
+        "authorised_by": "Autorisiert von",
+        "authorise_date": "Autorisierungsdatum",
+        "cheque_number": "Schecknummer",
+        "cheque_date": "Scheckdatum",
+        "receipt_number": "Empfangsnummer",
+        "action": "Aktion"
+      }
+    }
   },
   "lms": {
     "common": {},
