--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -579,7 +579,59 @@
     "create_quick_quote": "Crear cotización rápida",
     "create_normal_quote": "Crear cotización normal",
     "create_new_policy": "Crear nueva póliza",
-    "report_a_claim": "Reportar un reclamo"
+    "report_a_claim": "Reportar un reclamo",
+    "lead": "Prospecto",
+    "new_lead": "Nuevo Prospecto",
+    "import_lead": "Importar Prospecto",
+    "client_type_required": "El tipo de cliente es requerido",
+    "primary_details": "Detalles Primarios",
+    "campaign_name": "Nombre de la campaña",
+    "campaign_name_required": "El nombre de la campaña es requerido",
+    "date": "Fecha",
+    "date_required": "La fecha es requerida",
+    "occupation_required": "La ocupación es requerida",
+    "lead_status": "Estado del Prospecto",
+    "lead_status_required": "El estado del prospecto es requerido",
+    "lead_source": "Fuente del Prospecto",
+    "lead_source_required": "La fuente del prospecto es requerida",
+    "lead_activity": "Actividad del Prospecto",
+    "lead_activity_required": "La actividad del prospecto es requerida",
+    "website": "sitio web",
+    "website_required": "El sitio web es requerido",
+    "state": "Estado",
+    "state_required": "El estado es requerido",
+    "postal_address": "Dirección Postal",
+    "postal_address_required": "La dirección postal es requerida",
+    "postal_code": "Código Postal",
+    "postal_code_required": "El código postal es requerido",
+    "organization_details": "Detalles de la Organización",
+    "assigned_to": "Asignado A",
+    "assigned_to_required": "La asignación es requerida",
+    "organization": "Organización",
+    "organization_required": "La organización es requerida",
+    "organization_division": "División de la Organización",
+    "organization_division_required": "La división de la organización es requerida",
+    "team": "Equipo",
+    "team_required": "El equipo es requerido",
+    "system_required": "El sistema es requerido",
+    "product_required": "El producto es requerido",
+    "account_name": "Nombre de la Cuenta",
+    "account_name_required": "El nombre de la cuenta es requerido",
+    "sector_required": "El sector es requerido",
+    "annual_revenue": "Ingresos Anuales",
+    "annual_revenue_required": "Los ingresos anuales son requeridos",
+    "potential_amount": "Cantidad Potencial",
+    "potential_amount_required": "La cantidad potencial es requerida",
+    "potential_name": "Nombre Potencial",
+    "potential_name_required": "El nombre potencial es requerido",
+    "potential_sale_stage": "Etapa de Venta Potencial",
+    "potential_sale_stage_required": "La etapa de venta potencial es requerida",
+    "potential_contr": "Contrato Potencial",
+    "potential_contr_required": "El contrato potencial es requerido",
+    "converted": "convertido",
+    "converted_required": "Se requiere la conversión",
+    "potential_close_date": "Fecha de Cierre Potencial",
+    "potential_close_date_required": "La fecha de cierre potencial es requerida"
   },
   "gis": {
     "quotation": {
@@ -1107,8 +1159,8 @@
       "ipf_installments": "Cuotas IPF",
       "check_off_installments": "Cuotas de verificación",
       "transaction_type": "Tipo de transacción",
-  "client_information": "Información del cliente",
-  "commission": "Comisión"
+      "client_information": "Información del cliente",
+      "commission": "Comisión"
     },
     "claims": {
       "opening": {
@@ -1163,9 +1215,9 @@
         "enter_claim_estimate": "Ingrese Estimación de Reclamación",
         "cancel": "Cancelar",
         "save": "Guardar",
-        "edit_peril": "Editar Riesgo", 
-        "confirm_delete_peril": "¿Está seguro de que desea eliminar este riesgo?",  
-        "enter_peril": "Ingrese Riesgo" 
+        "edit_peril": "Editar Riesgo",
+        "confirm_delete_peril": "¿Está seguro de que desea eliminar este riesgo?",
+        "enter_peril": "Ingrese Riesgo"
       },
       "claim_transaction": {
         "claim_transaction_details": "Detalles de la transacción de reclamos",
@@ -1195,24 +1247,24 @@
         "currency": "Moneda"
       },
       "claim_transaction_report": {
-    "claim_transaction_report": "Informe de transacciones de reclamos",
-    "claim_revisions": "Revisiones de reclamos",
-    "claim_payments": "Pagos de reclamos",
-    "letters_and_memos": "Cartas y memorandos",
-    "policy_enquiry": "Consulta de pólizas",
-    "back_to_claim_enquiry": "Volver a la consulta de reclamos",
-    "trans_type": "Tipo de transacción",
-    "trans_date": "Fecha de la transacción",
-    "gross_liability": "Responsabilidad bruta",
-    "net_liability_payee": "Pagadero de responsabilidad neta",
-    "paid_amount": "Cantidad pagada",
-    "authorised_by": "Autorizado por",
-    "authorise_date": "Fecha de autorización",
-    "cheque_number": "Número de cheque",
-    "cheque_date": "Fecha del cheque",
-    "receipt_number": "Número de recibo",
-    "action": "Acción"
-  }
+        "claim_transaction_report": "Informe de transacciones de reclamos",
+        "claim_revisions": "Revisiones de reclamos",
+        "claim_payments": "Pagos de reclamos",
+        "letters_and_memos": "Cartas y memorandos",
+        "policy_enquiry": "Consulta de pólizas",
+        "back_to_claim_enquiry": "Volver a la consulta de reclamos",
+        "trans_type": "Tipo de transacción",
+        "trans_date": "Fecha de la transacción",
+        "gross_liability": "Responsabilidad bruta",
+        "net_liability_payee": "Pagadero de responsabilidad neta",
+        "paid_amount": "Cantidad pagada",
+        "authorised_by": "Autorizado por",
+        "authorise_date": "Fecha de autorización",
+        "cheque_number": "Número de cheque",
+        "cheque_date": "Fecha del cheque",
+        "receipt_number": "Número de recibo",
+        "action": "Acción"
+      }
     }
   },
   "lms": {
