--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -579,7 +579,59 @@
     "create_quick_quote": "Créer une cotation rapide",
     "create_normal_quote": "Créer une cotation normale",
     "create_new_policy": "Créer une nouvelle police",
-    "report_a_claim": "Déclarer un sinistre"
+    "report_a_claim": "Déclarer une réclamation",
+    "lead": "Prospect",
+    "new_lead": "Nouveau Prospect",
+    "import_lead": "Importer Prospect",
+    "client_type_required": "Le type de client est requis",
+    "primary_details": "Détails principaux",
+    "campaign_name": "Nom de la campagne",
+    "campaign_name_required": "Le nom de la campagne est requis",
+    "date": "Date",
+    "date_required": "La date est requise",
+    "occupation_required": "La profession est requise",
+    "lead_status": "Statut du prospect",
+    "lead_status_required": "Le statut du prospect est requis",
+    "lead_source": "Source du prospect",
+    "lead_source_required": "La source du prospect est requise",
+    "lead_activity": "Activité du prospect",
+    "lead_activity_required": "L'activité du prospect est requise",
+    "website": "site web",
+    "website_required": "Le site web est requis",
+    "state": "État",
+    "state_required": "L'état est requis",
+    "postal_address": "Adresse postale",
+    "postal_address_required": "L'adresse postale est requise",
+    "postal_code": "Code postal",
+    "postal_code_required": "Le code postal est requis",
+    "organization_details": "Détails de l'organisation",
+    "assigned_to": "Attribué à",
+    "assigned_to_required": "L'attribution est requise",
+    "organization": "Organisation",
+    "organization_required": "L'organisation est requise",
+    "organization_division": "Division de l'organisation",
+    "organization_division_required": "La division de l'organisation est requise",
+    "team": "Équipe",
+    "team_required": "L'équipe est requise",
+    "system_required": "Le système est requis",
+    "product_required": "Le produit est requis",
+    "account_name": "Nom du compte",
+    "account_name_required": "Le nom du compte est requis",
+    "sector_required": "Le secteur est requis",
+    "annual_revenue": "Revenu annuel",
+    "annual_revenue_required": "Le revenu annuel est requis",
+    "potential_amount": "Montant potentiel",
+    "potential_amount_required": "Le montant potentiel est requis",
+    "potential_name": "Nom potentiel",
+    "potential_name_required": "Le nom potentiel est requis",
+    "potential_sale_stage": "Étape de vente potentielle",
+    "potential_sale_stage_required": "L'étape de vente potentielle est requise",
+    "potential_contr": "Contrat potentiel",
+    "potential_contr_required": "Le contrat potentiel est requis",
+    "converted": "converti",
+    "converted_required": "La conversion est requise",
+    "potential_close_date": "Date de clôture potentielle",
+    "potential_close_date_required": "La date de clôture potentielle est requise"
   },
   "gis": {
     "quotation": {
@@ -1107,60 +1159,59 @@
       "debiting_type": "Type de débit",
       "ipf_installments": "Mensualités IPF",
       "check_offf_installments": "Vérifier les mensualités",
-       "transaction_type": "Type de transaction",
-  "client_information": "Informations sur le client",
-  "commission": "Commission"
-
+      "transaction_type": "Type de transaction",
+      "client_information": "Informations sur le client",
+      "commission": "Commission"
     },
     "claims": {
-    "opening": {
-      "claim_opening": "Ouverture de réclamation",
-      "product": "Produit",
-      "select_product": "Sélectionner un produit",
-      "policy": "Police",
-      "select_policy": "Sélectionner une police",
-      "loss_date": "Date de la perte",
-      "select_date": "Sélectionner une date",
-      "loss_time": "Heure de la perte",
-      "select_time": "Sélectionner une heure",
-      "risk": "Risque",
-      "select_risk": "Sélectionner un risque",
-      "notification_date": "Date de notification",
-      "causation": "Causation",
-      "select_causation": "Sélectionner une causation",
-      "catastrophe_event": "Catastrophe/Événement",
-      "select_catastrophe_event": "Sélectionner une catastrophe/événement",
-      "claim_description": "Description de la réclamation",
-      "enter_claim_description": "Entrez la description de la réclamation",
-      "party_to_blame": "Partie à blâmer",
-      "select_party_to_blame": "Sélectionner la partie à blâmer",
-      "average_basic_salary": "Salaire de base moyen",
-      "enter_average_basic_salary": "Entrez le salaire de base moyen",
-      "average_earnings": "Gains moyens",
-      "enter_average_earnings": "Entrez les gains moyens",
-      "off_duty_date_from": "Date d'incapacité à partir de",
-      "off_duty_date_to": "Date d'incapacité à",
-      "liability_admission": "Admission de responsabilité",
-      "next_review_date": "Prochaine date de révision",
-      "next_review_user": "Prochain utilisateur de révision",
-      "select_next_review_user": "Sélectionner le prochain utilisateur de révision",
-      "priority_level": "Niveau de priorité",
-      "select_priority_level": "Sélectionner un niveau de priorité",
-      "reference_number": "Numéro de référence",
-      "enter_reference_number": "Entrez le numéro de référence",
-      "accident_location": "Lieu de l'accident",
-      "enter_accident_location": "Entrez le lieu de l'accident",
-      "add_peril": "Ajouter un risque",
-      "peril": "Risque",
-      "claim_estimate": "Estimation de la réclamation",
-      "actions": "Actions",
-      "edit": "Modifier",
-      "delete": "Supprimer",
-      "capture_claim": "Capturer la réclamation",
-      "insured_as_claimant": "Assuré en tant que réclamant",
-      "claimant": "Réclamant",
-      "create_claimant": "Créer un réclamant",
-      "peril_details": "Détails du péril",
+      "opening": {
+        "claim_opening": "Ouverture de réclamation",
+        "product": "Produit",
+        "select_product": "Sélectionner un produit",
+        "policy": "Police",
+        "select_policy": "Sélectionner une police",
+        "loss_date": "Date de la perte",
+        "select_date": "Sélectionner une date",
+        "loss_time": "Heure de la perte",
+        "select_time": "Sélectionner une heure",
+        "risk": "Risque",
+        "select_risk": "Sélectionner un risque",
+        "notification_date": "Date de notification",
+        "causation": "Causation",
+        "select_causation": "Sélectionner une causation",
+        "catastrophe_event": "Catastrophe/Événement",
+        "select_catastrophe_event": "Sélectionner une catastrophe/événement",
+        "claim_description": "Description de la réclamation",
+        "enter_claim_description": "Entrez la description de la réclamation",
+        "party_to_blame": "Partie à blâmer",
+        "select_party_to_blame": "Sélectionner la partie à blâmer",
+        "average_basic_salary": "Salaire de base moyen",
+        "enter_average_basic_salary": "Entrez le salaire de base moyen",
+        "average_earnings": "Gains moyens",
+        "enter_average_earnings": "Entrez les gains moyens",
+        "off_duty_date_from": "Date d'incapacité à partir de",
+        "off_duty_date_to": "Date d'incapacité à",
+        "liability_admission": "Admission de responsabilité",
+        "next_review_date": "Prochaine date de révision",
+        "next_review_user": "Prochain utilisateur de révision",
+        "select_next_review_user": "Sélectionner le prochain utilisateur de révision",
+        "priority_level": "Niveau de priorité",
+        "select_priority_level": "Sélectionner un niveau de priorité",
+        "reference_number": "Numéro de référence",
+        "enter_reference_number": "Entrez le numéro de référence",
+        "accident_location": "Lieu de l'accident",
+        "enter_accident_location": "Entrez le lieu de l'accident",
+        "add_peril": "Ajouter un risque",
+        "peril": "Risque",
+        "claim_estimate": "Estimation de la réclamation",
+        "actions": "Actions",
+        "edit": "Modifier",
+        "delete": "Supprimer",
+        "capture_claim": "Capturer la réclamation",
+        "insured_as_claimant": "Assuré en tant que réclamant",
+        "claimant": "Réclamant",
+        "create_claimant": "Créer un réclamant",
+        "peril_details": "Détails du péril",
         "select_peril": "Sélectionner un péril",
         "enter_claim_estimate": "Entrez l'estimation de la réclamation",
         "cancel": "Annuler",
@@ -1168,54 +1219,54 @@
         "edit_peril": "Modifier le péril",
         "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?",
         "enter_peril": "Entrez le péril"
-    },
-    "claim_transaction": {
-      "claim_transaction_details": "Détails de la transaction de réclamation",
-      "claim_number": "Numéro de réclamation",
-      "product": "Produit",
-      "risk_wef": "Risque WEF",
-      "loss_description": "Description de la perte",
-      "claim_status": "Statut de la réclamation",
-      "catastrophe": "Catastrophe",
-      "policy_number": "Numéro de police",
-      "insured": "Assuré",
-      "risk_wet": "Risque WET",
-      "booked_by": "Réservé par",
-      "next_review_date": "Date de la prochaine revue",
-      "event": "Événement",
-      "endorsement_number": "Numéro d'endossement",
-      "risk": "Risque",
-      "claim_loss_date": "Date de la perte de la réclamation",
-      "booked_date": "Date de réservation",
-      "agent_intermediary": "Agent/Intermédiaire",
-      "priority_level": "Niveau de priorité",
-      "client": "Client",
-      "risk_value": "Valeur du risque",
-      "claim_notification_date": "Date de notification de la réclamation",
-      "admit_liability": "Admettre la responsabilité",
-      "insured_policy_no": "Numéro de police assuré",
-      "currency": "Devise"
-    },
-    "claim_transaction_report": {
-      "claim_transaction_report": "Rapport de transaction de réclamation",
-      "claim_revisions": "Révisions de réclamations",
-      "claim_payments": "Paiements de réclamations",
-      "letters_and_memos": "Lettres et mémos",
-      "policy_enquiry": "Enquête sur la police",
-      "back_to_claim_enquiry": "Retour à l'enquête sur la réclamation",
-      "trans_type": "Type de transaction",
-      "trans_date": "Date de la transaction",
-      "gross_liability": "Responsabilité brute",
-      "net_liability_payee": "Bénéficiaire de la responsabilité nette",
-      "paid_amount": "Montant payé",
-      "authorised_by": "Autorisé par",
-      "authorise_date": "Date d'autorisation",
-      "cheque_number": "Numéro de chèque",
-      "cheque_date": "Date du chèque",
-      "receipt_number": "Numéro de reçu",
-      "action": "Action"
+      },
+      "claim_transaction": {
+        "claim_transaction_details": "Détails de la transaction de réclamation",
+        "claim_number": "Numéro de réclamation",
+        "product": "Produit",
+        "risk_wef": "Risque WEF",
+        "loss_description": "Description de la perte",
+        "claim_status": "Statut de la réclamation",
+        "catastrophe": "Catastrophe",
+        "policy_number": "Numéro de police",
+        "insured": "Assuré",
+        "risk_wet": "Risque WET",
+        "booked_by": "Réservé par",
+        "next_review_date": "Date de la prochaine revue",
+        "event": "Événement",
+        "endorsement_number": "Numéro d'endossement",
+        "risk": "Risque",
+        "claim_loss_date": "Date de la perte de la réclamation",
+        "booked_date": "Date de réservation",
+        "agent_intermediary": "Agent/Intermédiaire",
+        "priority_level": "Niveau de priorité",
+        "client": "Client",
+        "risk_value": "Valeur du risque",
+        "claim_notification_date": "Date de notification de la réclamation",
+        "admit_liability": "Admettre la responsabilité",
+        "insured_policy_no": "Numéro de police assuré",
+        "currency": "Devise"
+      },
+      "claim_transaction_report": {
+        "claim_transaction_report": "Rapport de transaction de réclamation",
+        "claim_revisions": "Révisions de réclamations",
+        "claim_payments": "Paiements de réclamations",
+        "letters_and_memos": "Lettres et mémos",
+        "policy_enquiry": "Enquête sur la police",
+        "back_to_claim_enquiry": "Retour à l'enquête sur la réclamation",
+        "trans_type": "Type de transaction",
+        "trans_date": "Date de la transaction",
+        "gross_liability": "Responsabilité brute",
+        "net_liability_payee": "Bénéficiaire de la responsabilité nette",
+        "paid_amount": "Montant payé",
+        "authorised_by": "Autorisé par",
+        "authorise_date": "Date d'autorisation",
+        "cheque_number": "Numéro de chèque",
+        "cheque_date": "Date du chèque",
+        "receipt_number": "Numéro de reçu",
+        "action": "Action"
+      }
     }
-  }
   },
   "lms": {
     "common": {},
@@ -1350,7 +1401,7 @@
       "proceed": "Procéder",
       "select_an_option": "Sélectionner une option",
       "upload_documents": "Télécharger des documents",
-      "yes": "Oui",
+      "yes": "Oui"
     },
     "grp": {
       "agent_portal": {
